Add builds for PBL+weval variant of SpiderMonkey.
This PR adds `release-weval` and `debug-weval` build artifacts,
alongside existing `release` and `debug` artifacts.

It modifies the build script to add the appropriate configuration flags
to the `mozconfig` if invoked as `build-engine.sh {release|debug}
weval`, and adds the two new jobs to CI.

In addition, `download-engine.sh` is modified to support downloading
these variants if invoked as `download-engine.sh {release|debug} weval`.

Names and paths of existing artifacts remain the same, so this is fully
backward compatible. Further work in downstream consumers is needed to
actually make use of the PBL+weval AOT compilation functionality.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,11 +31,22 @@ jobs:
       run: |
         mkdir dist
         sudo apt-get update -y
+
         bash ./build-engine.sh release
         tar -a -cf dist/spidermonkey-wasm-static-lib_release.tar.gz release
         rm -rf release obj-release
+
+        bash ./build-engine.sh release weval
+        tar -a -cf dist/spidermonkey-wasm-static-lib_release_weval.tar.gz release-weval
+        rm -rf release-weval obj-release-weval
+
         bash ./build-engine.sh debug
         tar -a -cf dist/spidermonkey-wasm-static-lib_debug.tar.gz debug
+        rm -rf debug obj-debug
+
+        bash ./build-engine.sh debug weval
+        tar -a -cf dist/spidermonkey-wasm-static-lib_debug_weval.tar.gz debug-weval
+        rm -rf debug-weval obj-debug-weval
 
     - name: Calculate tag name
       run: |
